<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="donona_logo"
            app:srcCompat="@drawable/logo_text"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="29dp" />

        <!--
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="50dp" /> />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:labelFor="@id/editTextTextEmailAddress"
            android:text="@string/email_label"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="345dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/button"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:labelFor="@id/editTextPassword"
            android:text="@string/password_label"
            android:textSize="15sp" />
        <!--
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textPassword" /> />-->

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="345dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:minHeight="50dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="272dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_pw"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A17246"
            android:minHeight="48dp"
            android:onClick="onSignin"
            android:text="@string/sign_in"
            android:textSize="12sp" />

        <!--        <com.google.android.gms.common.SignInButton-->
        <!--            android:id="@+id/gmail_login"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:onClick="googleSignin"-->
        <!--            />-->

        <Button
            android:id="@+id/button2"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-4dp"
            android:backgroundTint="#ffffff"
            android:minHeight="48dp"
            android:onClick="onSignup"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="12sp" />

        <!--        Facebook login button-->
        <!--        <com.facebook.login.widget.LoginButton-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:minHeight="50dp"-->
        <!--            />-->

        <Button
            android:id="@+id/gmail_login"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:minHeight="48dp"
            android:onClick="googleSignin"
            android:text="@string/sign_in_gg"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <!-- <Button
             android:id="@+id/facebook_login"
             android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="-4dp"
             android:backgroundTint="@color/blue_fb"
             android:minHeight="48dp"
             android:onClick="facebookSignin"
             android:text="@string/sign_in_fb"
             android:textColor="@color/white"
             android:textSize="12sp" /> />-->

        <!-- <Button
             android:id="@+id/apple_login"
             android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="-4dp"
             android:backgroundTint="@color/black"
             android:minHeight="48dp"
             android:onClick="appleSignin"
             android:text="@string/sign_in_apple"
             android:textColor="@color/white"
             android:textSize="12sp" /> />-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="94dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/notice"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffebc9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>